[package]
name = "talk"
version = "0.1.0"
edition = "2021"
authors = ["Paul Iyobo <pauliyobo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pauliyobo/talk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
libloading = "0.7.3"
widestring = "0.5.1"
windows = { version = "0.48.0", features = ["Win32_System_Com", "Win32_Foundation", "Win32_System_Ole", "Win32_Media_Speech", "implement", "Foundation"] }
